--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,21 +2,29 @@
 @import "./animations.css";
 @import "./fretBoard.css";
 @import "./segment.css";
+@import "./ui.css";
 *, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-#inp {
-    width: 20rem;
-    height: 2rem;
-    padding: 1rem 2rem;
+h3 {
+    font-family: "Anton";
+}
+
+.container {
+    width: 90%;
+    height: auto;
+    margin: auto;
+    padding-bottom: 20rem;
+    background-color: var(--backgroundColour);
+
 }
 
 body {
     font-family: 'Quicksand';
-    background-color: var(--backgroundColour);
+    background-color: rgb(209, 209, 209);
 }
 
 .noteCell, .noteCellList {
@@ -26,11 +34,11 @@ body {
     width: 3rem;
     height: 2rem;
     /* padding: 1.35rem; */
-    margin: 0.25rem;
+    margin: auto ;
     border-radius: 10%;
-    color: #fff;
-    background-color: rgb(0, 0, 0);
-    text-shadow: 1px 1px 1px white;
+    border: 1px solid rgb(41, 38, 38);
+    color: rgb(41, 38, 38);
+    background-color: rgba(236, 236, 236, 0.171);
 }
 
 .noteCellList {
@@ -82,7 +90,7 @@ body {
 
 #output {
     display: flex;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 div.saved {
